--- a/Enhanced Regular Expressions Library/src/openjdk/regex/.gitignore
+++ b/Enhanced Regular Expressions Library/src/openjdk/regex/.gitignore
@@ -120,3 +120,27 @@
 /UnicodeProp$9.class
 /UnicodeProp.class
 /Range.class
+/BackRef.class
+/Branch.class
+/BranchConn.class
+/CIBackRef.class
+/Conditional.class
+/First.class
+/GroupHead.class
+/GroupRef.class
+/GroupTail.class
+/LazyLoop.class
+/Loop.class
+/Neg$Behind.class
+/Neg$BehindS.class
+/Neg$BnM.class
+/Neg$BnMS.class
+/Neg$Bound.class
+/Neg$CharPropertyNames$CharPropertyFactory.class
+/Neg$CharPropertyNames$CloneableProperty.class
+/Neg$CharPropertyNames.class
+/Neg$NotBehind.class
+/Neg$NotBehindS.class
+/Neg.class
+/Pos.class
+/Prolog.class
