Around half way through the extraction of all intermediate calculations from Pattern. Working Build.

--- a/Enhanced Regular Expressions Library/src/openjdk/regex/.gitignore
+++ b/Enhanced Regular Expressions Library/src/openjdk/regex/.gitignore
@@ -158,3 +158,107 @@
 /ErrorProvider.class
 /CodePointArray.class
 /CodePointSequence.class
+/Pattern$BiftClass.class
+/CompiledPattern.class
+/UncompiledPattern.class
+/Node.class
+/Node$Begin.class
+/Node$Caret.class
+/Node$CharProperty.class
+/Node$Dollar.class
+/Node$End.class
+/Node$LastMatch.class
+/Node$LastNode.class
+/Node$LineEnding.class
+/Node$Start.class
+/Node$StartS.class
+/Node$UnixCaret.class
+/Node$UnixDollar.class
+/Node$CharProperty$1.class
+/CharProperty.class
+/CharProperty$1.class
+/CharProperty$Block.class
+/CharProperty$BmpCharProperty.class
+/CharProperty$Category.class
+/CharProperty$Ctype.class
+/CharProperty$HorizWS.class
+/CharProperty$Script.class
+/CharProperty$Single.class
+/CharProperty$SingleI.class
+/CharProperty$SingleS.class
+/CharProperty$SingleU.class
+/CharProperty$Utype.class
+/CharProperty$VertWS.class
+/Node$BackRef.class
+/Node$Branch.class
+/Node$BranchConn.class
+/Node$CIBackRef.class
+/Node$Curly.class
+/Node$GroupCurly.class
+/Node$GroupHead.class
+/Node$GroupRef.class
+/Node$GroupTail.class
+/Node$LazyLoop.class
+/Node$Loop.class
+/Node$Prolog.class
+/Node$Ques.class
+/Node$1.class
+/Node$Behind.class
+/Node$BehindS.class
+/Node$Conditional.class
+/Node$First.class
+/Node$Neg.class
+/Node$NotBehind.class
+/Node$NotBehindS.class
+/Node$Pos.class
+/CharProperty$2.class
+/CharProperty$3.class
+/CharProperty$4.class
+/CharProperty$All.class
+/CharProperty$Dot.class
+/CharProperty$UnixDot.class
+/UnProcessedPattern.class
+/UnprocessedPattern.class
+/Node$Slice.class
+/Node$SliceI.class
+/Node$SliceIS.class
+/Node$SliceNode.class
+/Node$SliceS.class
+/Node$SliceU.class
+/Node$SliceUS.class
+/CharProperty$BitClass.class
+/Node$Bound.class
+/Node$BnM.class
+/Node$BnMS.class
+/CharPropertyNames$CharPropertyFactory.class
+/CharPropertyNames$CloneableProperty.class
+/CharPropertyNames.class
+/CharPropertyNames$1.class
+/CharPropertyNames$10.class
+/CharPropertyNames$11.class
+/CharPropertyNames$12.class
+/CharPropertyNames$13.class
+/CharPropertyNames$14.class
+/CharPropertyNames$15.class
+/CharPropertyNames$16.class
+/CharPropertyNames$17.class
+/CharPropertyNames$18.class
+/CharPropertyNames$19.class
+/CharPropertyNames$2.class
+/CharPropertyNames$20.class
+/CharPropertyNames$21.class
+/CharPropertyNames$22.class
+/CharPropertyNames$23.class
+/CharPropertyNames$3.class
+/CharPropertyNames$4.class
+/CharPropertyNames$5.class
+/CharPropertyNames$6.class
+/CharPropertyNames$7.class
+/CharPropertyNames$8.class
+/CharPropertyNames$9.class
+/UnprocessedPattern$1.class
+/UnprocessedPattern$2.class
+/UnprocessedPattern$3.class
+/UnprocessedPattern$4.class
+/UnprocessedPattern$5.class
+/GroupRegistry.class
