Done with extraction of all parsing methods to another class. All tests green.

--- a/Enhanced Regular Expressions Library/src/openjdk/regex/.gitignore
+++ b/Enhanced Regular Expressions Library/src/openjdk/regex/.gitignore
@@ -262,3 +262,9 @@
 /UnprocessedPattern$4.class
 /UnprocessedPattern$5.class
 /GroupRegistry.class
+/PatternCompiler$1.class
+/PatternCompiler$2.class
+/PatternCompiler$3.class
+/PatternCompiler$4.class
+/PatternCompiler$5.class
+/PatternCompiler.class
