Started proper enregex. Have added everything but the actual assertion code.

--- a/Enhanced Regular Expressions Library/src/eredmel/regex/.gitignore
+++ b/Enhanced Regular Expressions Library/src/eredmel/regex/.gitignore
@@ -268,3 +268,8 @@
 /PatternCompiler$4.class
 /PatternCompiler$5.class
 /PatternCompiler.class
+/Node$EnregexOpenParen.class
+/EnregexSystem.class
+/EnregexSystem$EnregexSymbol.class
+/Node$EnregexCloseParen.class
+/Node$EnregexQuote.class
