Accidentally deleted important files. Committing so I can check out a previous state

--- a/Enhanced Regular Expressions Library/src/eredmel/regex/.gitignore
+++ b/Enhanced Regular Expressions Library/src/eredmel/regex/.gitignore
@@ -273,3 +273,7 @@
 /EnregexSystem$EnregexSymbol.class
 /Node$EnregexCloseParen.class
 /Node$EnregexQuote.class
+/EnregexType.class
+/SymbolPair.class
+/EnregexType$EnregexSymbol.class
+/EnregexSegment.class
