--- a/Eredmel Test Suite/.classpath
+++ b/Eredmel Test Suite/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Enhanced Regular Expression Library"/>
 	<classpathentry kind="src" path="/Eredmel Interpreter"/>
+	<classpathentry kind="src" path="/Eredmel Utilities"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
