--- a/Enhanced Regular Expressions Library/.classpath
+++ b/Enhanced Regular Expressions Library/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="src"/>
+	<classpathentry kind="lib" path="/Differential Equations/jfreechart-1.0.19/junit-4.11.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
